--- a/src/booking.css
+++ b/src/booking.css
@@ -1,6 +1,11 @@
 .entry-booking {
     background-color: #5A3D31;
     padding-top: 115px;
+    
+}
+
+.contain {
+    position: relative;
 }
 
 .booking-container-custom {
@@ -10,6 +15,7 @@
     max-width: 600px;
     margin: 0 auto;
     border-radius: 10px;
+    z-index: 2; /* Ensure form-box is above the motif */
 }
 
 .booking-container-custom h2 {
@@ -81,11 +87,13 @@
 
 /* Calendar styles */
 .react-calendar {
-    background: linear-gradient(to right, #5A3D31, #4A2C2A);
-    border: none;
+    border: 1px solid #fff;
+    background: #4A2C2A;
     border-radius: 10px;
     color: white;
     padding: 10px;
+    width: 100%;
+
 }
 
 .react-calendar__navigation button {
@@ -141,4 +149,24 @@
 
 .book-options {
     color: black;
+}
+
+.cherry-blossom-left-custom {
+    position: absolute;
+    z-index: 1;
+    width: 26%;
+    max-width: 500px; 
+    left: 0; 
+    top: 50px;
+}
+
+.cherry-blossom-right-custom {
+    position: absolute;
+    z-index: 1;
+    width: 26%;
+    max-width: 500px; 
+    bottom: -1px; 
+    right: 0; 
+    transform: rotate(-90deg); 
+    transform-origin: center;
 }
