--- a/src/form.css
+++ b/src/form.css
@@ -1,4 +1,3 @@
-/* Form Container Styles */
 .entry {
     background-color: #5A3D31;
     padding-top: 85px;
@@ -14,14 +13,14 @@
 }
 
 .form-box {
-    background-color: rgba(74, 44, 42, 0.8); /* Transparent background */
+    background-color: rgba(74, 44, 42, 0.8);
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 400px;
     text-align: center;
-    z-index: 2; /* Ensure form-box is above the motif */
+    z-index: 2;
 }
 
 .form-box h2 {
@@ -33,6 +32,7 @@
 .form-group {
     margin-bottom: 15px;
     text-align: left;
+    position: relative;
 }
 
 .form-group label {
@@ -151,7 +151,14 @@
 
 .error-message {
     color: #ff8080;
-    margin: 10px 0;
+    margin-top: 5px;
+    font-size: 0.875rem;
+    display: flex;
+    align-items: center;
+}
+
+.error-message i {
+    margin-right: 5px;
 }
 
 .form-box span {
@@ -163,21 +170,21 @@
     justify-content: space-between;
 }
 
-.cherry-blossom-left  {
+.cherry-blossom-left {
     position: absolute;
     z-index: 1;
     width: 30%;
-    max-width: 500px; 
-    left: 0; 
+    max-width: 500px;
+    left: 0;
 }
 
 .cherry-blossom-right {
     position: absolute;
     z-index: 1;
     width: 30%;
-    max-width: 500px; 
-    bottom: -1px; 
-    right: 0; 
-    transform: rotate(-90deg); 
+    max-width: 500px;
+    bottom: -1px;
+    right: 0;
+    transform: rotate(-90deg);
     transform-origin: center;
 }
