--- a/src/index.css
+++ b/src/index.css
@@ -299,3 +299,20 @@ body, html {
   margin-top: 10px;
 }
 
+.tooltip-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.tooltip-content span {
+  margin-right: 10px;
+}
+
+.close-btn {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 14px;
+  cursor: pointer;
+}
