--- a/src/form.css
+++ b/src/form.css
@@ -80,7 +80,7 @@
     cursor: pointer;
     font-size: 1rem;
     border-radius: 20px;
-    margin: 10px 0;
+    margin: 10px 10px;
     width: 100%;
 }
 
